--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Fuentes de información: <br>
 
 Los siguientes gráficos muestran información de los nacimientos contabilizando un año natural desde el mes en el que se produjo el evento.<br><br>
 
-Los gráficos están estruturados principalmente en tres secciones según el tipo de competición con el objetivo de facilitar al lector su lectura visual:<br>
+Los gráficos están estructurados principalmente en tres secciones según el tipo de competición con el objetivo de facilitar al lector su lectura visual:<br>
 - Nacimientos cuando ha habido eventos relevantes de la Selección Española de fútbol <br>
 - Nacimientos cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
 - Nacimientos cuando un equipo de segunda división de la liga española ha ascendido a primera.<br>
