--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 Nombre: Rubén Fondón<br>
 URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
-<h2>Estudio Baby Boom según eventos futbolísticos en España</h2>
+<h2>Indice</h2>
+<a href="#Ancla">Ancla</a>
 
-Fuentes de información: <br>
-- Instituto Nacional de Estadística<br>
-- FIFA<br>
-- Wikipedia<br>
-<br>
+
+<h2>Estudio Baby Boom según eventos futbolísticos en España</h2>
 
 Los siguientes gráficos muestran información de los nacimientos contabilizando un año natural desde el mes en el que se produjo el evento.<br><br>
 
@@ -20,6 +18,14 @@ Los gráficos están estructurados principalmente en tres secciones según el ti
 En las dos primeras secciones se han utilizado datos a nivel estatal por la repercusión nacional que tiene la selección, como el Real Madrid y el Barcelona.<br>
 En la tercera sección, los gráficos se han agrupado por Comunidad Autónoma exceptuando el ascenso del Atlético de Madrid que tiene un grupo de seguidores en todo el ámbito nacional. <br>
 Con esta seperación por regiones, también conseguimos eliminar la distorsión por diferentes escalas ya que nacen cantidades diferentes de niños en cada Comunidad.
+
+
+<a name="Ancla" id="a"></a>
+<h2>Fuentes de información: </h2>
+- Instituto Nacional de Estadística<br>
+- FIFA<br>
+- Wikipedia<br>
+<br>
 
 <h3>Selección Española</h3>
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=711909960&amp;format=interactive"></iframe>
