--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Nombre: Rubén Fondón<br>
 URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
 <h2>Indice</h2>
-<a href="#Ancla">Ancla</a>
+<a href="#Fuentes">Fuentes de Información</a>
 
 
 <h2>Estudio Baby Boom según eventos futbolísticos en España</h2>
@@ -20,7 +20,7 @@ En la tercera sección, los gráficos se han agrupado por Comunidad Autónoma ex
 Con esta seperación por regiones, también conseguimos eliminar la distorsión por diferentes escalas ya que nacen cantidades diferentes de niños en cada Comunidad.
 
 
-<a name="Ancla" id="a"></a>
+<a name="Fuentes" id="a"></a>
 <h2>Fuentes de información: </h2>
 - Instituto Nacional de Estadística<br>
 - FIFA<br>
