--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@ URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
 <h2>Estudio Baby Boom según eventos futbolísticos en España</h2>
 
-Los siguientes gráficos muestran información de los nacimientos contabilizando un año natural desde el mes en el que se produjo el evento.<br><br>
+El objetivo de este análisis es mostrar de forma visual mediante gráficos el impacto que tienen las victorias de la Selección Española y de las Champions del Barcelona y Real Madrid sobre la natalidad en España 9 meses después.<br><br>
 
 Los gráficos están estructurados principalmente en tres secciones según el tipo de competición con el objetivo de facilitar al lector su lectura visual:<br>
-- Nacimientos cuando ha habido eventos relevantes de la Selección Española de fútbol <br>
-- Nacimientos cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
-- Nacimientos cuando un equipo de segunda división de la liga española ha ascendido a primera.<br>
-
-En las dos primeras secciones se han utilizado datos a nivel estatal por la repercusión nacional que tiene la selección, como el Real Madrid y el Barcelona.<br>
-En la tercera sección, los gráficos se han agrupado por Comunidad Autónoma exceptuando el ascenso del Atlético de Madrid que tiene un grupo de seguidores en todo el ámbito nacional. <br>
-Con esta seperación por regiones, también conseguimos eliminar la distorsión por diferentes escalas ya que nacen cantidades diferentes de niños en cada Comunidad.
-
+- Histórico de nacimientos a nivel nacional cuando ha habido eventos relevantes de la Selección Española de fútbol <br>
+- Histórico de nacimientos en España cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
+- Análisis de impacto en nacimientos por evento según medial nacional anual.<br>
 
 <a name="Fuentes" id="a"></a>
 <h2>Fuentes de información: </h2>
