--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ Nombre: Rubén Fondón<br>
 URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
 <h2>Indice</h2>
-<a href="#Fuentes">Fuentes de Información</a>
+<a href="#Fuentes">Fuentes de Información</a><br>
+<a href="#Selección">Baby Boom según victorias Selección Española</a><br>
+<a href="#Barcelona">Baby Boom en Champions ganadas por Barcelona</a><br>
 
 
 <h2>Estudio Baby Boom según eventos futbolísticos en España</h2>
@@ -14,6 +16,7 @@ Los gráficos están estructurados principalmente en tres secciones según el ti
 - Histórico de nacimientos a nivel nacional cuando ha habido eventos relevantes de la Selección Española de fútbol <br>
 - Histórico de nacimientos en España cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
 - Análisis de impacto en nacimientos por evento según medial nacional anual.<br>
+Se han analizado datos principalmente desde el año 2000.
 
 <a name="Fuentes" id="a"></a>
 <h2>Fuentes de información: </h2>
