--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 Nombre: Rubén Fondón<br>
 URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
+<a name="Indice" id="a"></a>
 <h2>Indice</h2>
 <a href="#Fuentes">Fuentes de Información</a><br>
 <a href="#Selección">Baby Boom según victorias Selección Española</a><br>
-<a href="#Barcelona">Baby Boom en Champions ganadas por Barcelona</a><br>
+<a href="#Barcelona">Baby Boom en Champions ganadas por el Barcelona</a><br>
+<a href="Madrid">Baby Boom en Champions ganadas por el Real Madrid</a><br>
 
 
 <h2>Estudio Baby Boom según eventos futbolísticos en España</h2>
@@ -24,27 +26,14 @@ Se han analizado datos principalmente desde el año 2000.
 - FIFA<br>
 - Wikipedia<br>
 <br>
-
+<a name="Selección" id="a"></a>
 <h3>Selección Española</h3>
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=711909960&amp;format=interactive"></iframe>
 
-<h4>Champions Barcelona y Real Madrid </h4>
+<a name="Barcelona" id="a"></a>
+<h4>Baby Boom en Champions ganadas por el Barcelona </h4>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe>
 
+<a name="Madrid" id="a"></a>
+<h4>Baby Boom en Champions ganadas por el REal Madrid</h4>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe>
-
-<h5> Ascensos a Primera División</h5>
-
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=942104361&amp;format=interactive"></iframe>
-
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=176098317&amp;format=interactive"></iframe>
-
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=1883795555&amp;format=interactive"></iframe>
-
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=1271441824&amp;format=interactive"></iframe>
-
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=869985456&amp;format=interactive"></iframe>
-
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=81256895&amp;format=interactive"></iframe>
-
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=1760857456&amp;format=interactive"></iframe>
