--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@ Se han analizado datos principalmente desde el año 2000.
 <a href="#Indice">Indice</a><br>
 
 <a name="Madrid" id="a"></a>
-<h4>Baby Boom en Champions ganadas por el REal Madrid</h4>
+<h4>Baby Boom en Champions ganadas por el Real Madrid</h4>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe><br>
 <a href="#Indice">Indice</a><br>
