--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 <a href="#Fuentes">Fuentes de Información</a><br>
 <a href="#Selección">Baby Boom según victorias Selección Española</a><br>
 <a href="#Barcelona">Baby Boom en Champions ganadas por el Barcelona</a><br>
-<a href="Madrid">Baby Boom en Champions ganadas por el Real Madrid</a><br>
+<a href="#Madrid">Baby Boom en Champions ganadas por el Real Madrid</a><br>
 
 
 <h2>Estudio Baby Boom según eventos futbolísticos en España</h2>
