--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@ Se han analizado datos principalmente desde el año 2000.
 
 <br>
 <a name="Selección" id="a"></a>
-<h3>Selección Española</h3>
+<h2>Baby Boom en victorias de la Selección Española</h2>
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=711909960&amp;format=interactive"></iframe><br>
 <a href="#Indice">Indice</a><br>
 
 <a name="Barcelona" id="a"></a>
-<h4>Baby Boom en Champions ganadas por el Barcelona </h4>
+<h2>Baby Boom en Champions ganadas por el Barcelona </h2>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe><br>
 <a href="#Indice">Indice</a><br>
 
 <a name="Madrid" id="a"></a>
-<h4>Baby Boom en Champions ganadas por el Real Madrid</h4>
+<h2>Baby Boom en Champions ganadas por el Real Madrid</h2>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe><br>
 <a href="#Indice">Indice</a><br>
