--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ El objetivo de este análisis es mostrar de forma visual mediante gráficos el i
 Los gráficos están estructurados principalmente en tres secciones según el tipo de competición con el objetivo de facilitar al lector su lectura visual:<br>
 - Histórico de nacimientos a nivel nacional cuando ha habido eventos relevantes de la Selección Española de fútbol <br>
 - Histórico de nacimientos en España cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
-- Análisis de impacto en nacimientos por evento según medial nacional anual.<br>
+- Análisis de impacto en nacimientos por evento según medial nacional anual.
 Se han analizado datos principalmente desde el año 2000.<br>
 
-A continuación a modo de introducción dejo el siguiente video para la diversión del lector de este análisis.<br>
+A continuación a modo de introducción dejo el siguiente video para la diversión del lector de este análisis.<br><br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5PlljL4pDLE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
