--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
 <a name="Indice" id="a"></a>
 <h2>Indice</h2>
-<a href="#Audicencia">Audiencia del análisis</a><br>
+<a href="#Audiencia">Audiencia del análisis</a><br>
 <a href="#Fuentes">Fuentes de Información</a><br>
 <a href="#Selección">Baby Boom según victorias Selección Española</a><br>
 <a href="#Barcelona">Baby Boom en Champions ganadas por el Barcelona</a><br>
