--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<body background="https://ak6.picdn.net/shutterstock/videos/2530226/thumb/5.jpg">
+
 <h1>Portfolio - Rubén Fondón </h1>
 Nombre: Rubén Fondón<br>
 URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
