--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@ URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
 <a name="Indice" id="a"></a>
 <h2>INDICE</h2>
-<a href="#Audiencia">INTRODUCCION</a><br>
+<a href="#Introduccion">INTRODUCCION</a><br>
 <a href="#Fuentes">FUENTES DE INFORMACION</a><br>
 <a href="#Selección">BABY BOOM SELECCION ESPAÑOLA</a><br>
 <a href="#Barcelona">BABY BOOM BARCELONA</a><br>
 <a href="#Madrid">BABY BOOM REAL MADRID</a><br>
 <a href="#Analisis">ANALISIS EVENTOS CON MAYOR IMPACTO</a><br>
 
-
+<a name="Introduccion" id="a"></a>
 <h2>INTRODUCCION</h2>
 
 ¿Sube la natalidad cuando se gana una campeonato de fútbol?
 
-El objetivo de este análisis es mostrar de forma visual mediante gráficos el impacto que tienen las victorias de la Selección Española y de las Champions del Barcelona y Real Madrid sobre la natalidad en España 9 meses después.<br><br>
+El objetivo de este análisis es dar respuesta a la pregunta anterior. Para ello he cruzado datos estadísticos del INE y de la Fifa y Wikipedia desde que tengo memoria en lo referido en este deporte, que son los años 90.
 
-Los gráficos están estructurados principalmente en tres secciones según el tipo de competición con el objetivo de facilitar al lector su lectura visual:<br>
-- Histórico de nacimientos a nivel nacional cuando ha habido eventos relevantes de la Selección Española de fútbol <br>
+Con el fin de no hacer un análisis demasiado largo y tedioso, he centrado el mismo en tres principales apartados según la relevancia de las victorias a nivel nacional, y según mis propios intereses (soy nativo de Zaragoza y seguidor de este equipo)<br>
+
+- Histórico de nacimientos a nivel nacional cuando ha habido victorias importantes por parte de la Selección Española de fútbol <br>
 - Histórico de nacimientos en España cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
 - Análisis de impacto en nacimientos por evento según medial nacional anual.
 Se han analizado datos principalmente desde el año 2000.<br>
@@ -35,10 +36,7 @@ Se han analizado datos principalmente desde el año 2000.<br>
 A continuación a modo de introducción dejo el siguiente video para la diversión del lector de este análisis.<br><br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5PlljL4pDLE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<a name="Audiencia" id="a"></a>
-<h2>Audiencia del análisis </h2>
-Este análisis está enfocado a cualquier amante del fútbol español, así como negocios o entidades interesadas en los nacimientos de bebés (por ejemplo hospitales, tiendas especalizadas, etc).
+<a href="#Indice">Indice</a><br>
 
 <a name="Fuentes" id="a"></a>
 <h2>FUENTES DE INFORMACION </h2>
