--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ El objetivo de este análisis es dar respuesta a la pregunta anterior. Para ello
 
 Con el fin de no hacer un análisis demasiado largo y tedioso, he centrado el mismo en tres principales apartados según la relevancia de las victorias a nivel nacional, y según mis propios intereses (soy nativo de Zaragoza y seguidor de este equipo)<br>
 
-- Histórico de nacimientos a nivel nacional cuando ha habido victorias importantes por parte de la Selección Española de fútbol <br>
+- Histórico de nacimientos a nivel nacional meses después de que la Selección Española haya ganado un título. <br>
 - Histórico de nacimientos en España cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
-- Análisis de impacto en nacimientos por evento según medial nacional anual.
-Se han analizado datos principalmente desde el año 2000.<br>
+- Histórico de nacimientos en la región de Aragón cuando el Real Zaragoza ha ganado un título. <br>
+- Análisis del impacto positivo de crecimientos desde el mes 8 al mes sobre la media anual en cada evento futbolístico mencionadpo anteriormente.<br>
 
-A continuación a modo de introducción dejo el siguiente video para la diversión del lector de este análisis.<br><br>
+A modo introductorio y humorístico comparto para el lector este video tan divertido relacionado con el tema tratado: relación entre el fútbol y nacimientos de bebés.<br><br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5PlljL4pDLE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <a href="#Indice">Indice</a><br>
