--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@ Con el fin de no hacer un análisis demasiado largo y tedioso, he centrado el mi
 - Histórico de nacimientos en la región de Aragón cuando el Real Zaragoza ha ganado un título. <br>
 - Análisis del impacto positivo de crecimientos desde el mes 8 al mes sobre la media anual en cada evento futbolístico mencionadpo anteriormente.<br>
 
+La audiencia de este análisis podría ser cualquier amante del fútbol y de los niños, seguidores de los equipos mencionados anteriormente, y cualquier entidad privada o pública interesada en el crecimiento población: hospitales, marcas de productos para bebés, tiendas especializadas, etc.
+
+Este trabajo se ha desarrollado con herramientas online como google spreadsheet y stackblitz soportado en lenguaje html. También se ha compartido en GitHub.
+
 A modo introductorio y humorístico comparto para el lector este video tan divertido relacionado con el tema tratado: relación entre el fútbol y nacimientos de bebés.<br><br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5PlljL4pDLE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
