--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Con el fin de no hacer un análisis demasiado largo y tedioso, he centrado el mi
 
 La audiencia de este análisis podría ser cualquier amante del fútbol y de los niños, seguidores de los equipos mencionados anteriormente, y cualquier entidad privada o pública interesada en el crecimiento población: hospitales, marcas de productos para bebés, tiendas especializadas, etc.
 
-Este trabajo se ha desarrollado con herramientas online como google spreadsheet y stackblitz soportado en lenguaje html. También se ha compartido en GitHub.
+Las herramientas o medio utilizado para llevar a cabo este análisis ha sido google spreadsheet y stackblitz bajo lenguaje html. También se ha compartido en GitHub.
 
 A modo introductorio y humorístico comparto para el lector este video tan divertido relacionado con el tema tratado: relación entre el fútbol y nacimientos de bebés.<br><br>
 
