--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body background="https://ak6.picdn.net/shutterstock/videos/2530226/thumb/5.jpg">
+<body background="https://img.freepik.com/free-photo/shooting-shot-football-goal-net-with-green-grass-field-background_1150-6178.jpg?size=626&ext=jpg">
 
 <!-- Hay que meter 
 objetivo
