--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ https://es.wikipedia.org/wiki/Real_Zaragoza<br>
 <a name="Selección" id="a"></a>
 <h2>BABY BOOM SELECCION ESPAÑOLA</h2>
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=711909960&amp;format=interactive"></iframe><br>
+En esta primera gráfica se observa que hay un pico de nacimientos en el mes 9 cuando España ganó (en orden cronológico) 
 <a href="#Indice">Indice</a><br>
 
 <a name="Barcelona" id="a"></a>
