--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@ https://es.wikipedia.org/wiki/Real_Zaragoza<br>
 <a name="Selección" id="a"></a>
 <h2>BABY BOOM SELECCION ESPAÑOLA</h2>
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=711909960&amp;format=interactive"></iframe><br>
-En esta primera gráfica se observa que hay un pico de nacimientos en el mes 9 cuando España ganó (en orden cronológico) 
+En esta primera gráfica se observa que hay un pico de nacimientos en el mes 9 cuando España ganó (en orden cronológico) la Copa del Mundo de 2010 y la Eurocopa de 2012. En la primera Eurocopa del 2008 se ve también un gran crecimiento en el mes 10 posterior. Por lo tanto en los dos eventos sí que vemos una relación positiva de nacimientos.
+Hay que tener en cuenta que los datos obtenidos del INE no muestran un nivel de granuralidad de nacimiento diarios (solamente acumulado mensual)por lo que parte de los nacimientos del Mes 10 de la primera Eurocopa podrían también estar asociados a ese evento si nacieron a principio de mes.
+
+Si normalizamos estas subidas de nacimientos y las dividimos respecto a la media de nacimientos anuales, veremos que el Mundal fue el campeonato que más impactó. Esta valoración se puede observar en el último capítulo de este estudio.
+
 <a href="#Indice">Indice</a><br>
 
 <a name="Barcelona" id="a"></a>
