--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ Con el fin de no hacer un análisis demasiado largo y tedioso, he centrado el mi
 - Histórico de nacimientos en España cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
 - Histórico de nacimientos en la región de Aragón cuando el Real Zaragoza ha ganado un título. <br>
 - Análisis del impacto positivo de crecimientos desde el mes 8 al mes sobre la media anual en cada evento futbolístico mencionadpo anteriormente.<br>
-
+<br>
 La audiencia de este análisis podría ser cualquier amante del fútbol y de los niños, seguidores de los equipos mencionados anteriormente, y cualquier entidad privada o pública interesada en el crecimiento población: hospitales, marcas de productos para bebés, tiendas especializadas, etc.
-
+<br>
 Las herramientas o medio utilizado para llevar a cabo este análisis ha sido google spreadsheet y stackblitz bajo lenguaje html. También se ha compartido en GitHub.
-
+<br>
 A modo introductorio y humorístico comparto para el lector este video tan divertido relacionado con el tema tratado: relación entre el fútbol y nacimientos de bebés.<br><br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5PlljL4pDLE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -57,9 +57,9 @@ https://es.wikipedia.org/wiki/Real_Zaragoza<br>
 <h2>BABY BOOM SELECCION ESPAÑOLA</h2>
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=711909960&amp;format=interactive"></iframe><br>
 En esta primera gráfica se observa que hay un pico de nacimientos en el mes 9 cuando España ganó (en orden cronológico) la Copa del Mundo de 2010 y la Eurocopa de 2012. En la primera Eurocopa del 2008 se ve también un gran crecimiento en el mes 10 posterior. Por lo tanto en los dos eventos sí que vemos una relación positiva de nacimientos.
-Hay que tener en cuenta que los datos obtenidos del INE no muestran un nivel de granuralidad de nacimiento diarios (solamente acumulado mensual)por lo que parte de los nacimientos del Mes 10 de la primera Eurocopa podrían también estar asociados a ese evento si nacieron a principio de mes.
+Hay que tener en cuenta que los datos obtenidos del INE no muestran un nivel de granuralidad de nacimiento diarios (solamente acumulado mensual)por lo que parte de los nacimientos del Mes 10 de la primera Eurocopa podrían también estar asociados a ese evento si nacieron a principio de mes.<br>
 
-Si normalizamos estas subidas de nacimientos y las dividimos respecto a la media de nacimientos anuales, veremos que el Mundal fue el campeonato que más impactó. Esta valoración se puede observar en el último capítulo de este estudio.
+Si normalizamos estas subidas de nacimientos y las dividimos respecto a la media de nacimientos anuales, veremos que el Mundal fue el campeonato que más impactó. Esta valoración se puede observar en el último capítulo de este estudio.<br>
 
 <a href="#Indice">Indice</a><br>
 
