--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Con el fin de no hacer un análisis demasiado largo y tedioso, he centrado el mi
 - Histórico de nacimientos en la región de Aragón cuando el Real Zaragoza ha ganado un título. <br>
 - Análisis del impacto positivo de crecimientos desde el mes 8 al mes sobre la media anual en cada evento futbolístico mencionadpo anteriormente.<br>
 <br>
+Este estudio no tiene en cuenta variables económicas y políticas que pudieron afectar al número de nacimientos en ciertos años como son el cheque bebé dotado por los gobiernos de Zapatero desde 2007 a 2010, o la gran crisis económica que afectó a España desde 2008 hasta 2014. La inclusión de estas variables podría ser objetivo de un análisis futuro más profundo y aproximado a la realidad.
+
 La audiencia de este análisis podría ser cualquier amante del fútbol y de los niños, seguidores de los equipos mencionados anteriormente, y cualquier entidad privada o pública interesada en el crecimiento población: hospitales, marcas de productos para bebés, tiendas especializadas, etc.
 <br>
 Las herramientas o medio utilizado para llevar a cabo este análisis ha sido google spreadsheet y stackblitz bajo lenguaje html. También se ha compartido en GitHub.
@@ -68,6 +70,8 @@ Si normalizamos estas subidas de nacimientos y las dividimos respecto a la media
 <h2>BABY BOOM BARCELONA</h2>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe><br>
 <a href="#Indice">Indice</a><br>
+
+En el caso de victorias del F.C. Barcelona, las conclusiones obtenidas 
 
 <a name="Madrid" id="a"></a>
 <h2>BABY BOOM REAL MADRID</h2>
