--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@ http://www.ine.es/dynt3/inebase/es/index.htm?padre=1123&capsel=1125<br>
 - Wikipedia<br>
 https://es.wikipedia.org/wiki/Selecci%C3%B3n_de_f%C3%BAtbol_de_Espa%C3%B1a
 https://es.wikipedia.org/wiki/Liga_de_Campeones_de_la_UEFA
-https://es.wikipedia.org/wiki/Real_Zaragoza<br>
+https://es.wikipedia.org/wiki/Real_Zaragoza<br><br>
+
+Adicionalmente a estas fuentes, para calcular el mes 9 donde habría un hipotético reapunte de nacimientos, se han sumado 40 semanas naturales a la fecha exacta del evento. Estas fechas se han obtenido de diferentes páginas de diarios deportivos y locales (Marca, As, Sport, Heraldo y Periódico de Aragón).
+
 <a href="#Indice">Indice</a><br>
 
 <br>
@@ -71,7 +74,7 @@ Si normalizamos estas subidas de nacimientos y las dividimos respecto a la media
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe><br>
 <a href="#Indice">Indice</a><br>
 
-En el caso de victorias del F.C. Barcelona, las conclusiones obtenidas 
+En el caso de victorias del F.C. Barcelona se puede observar que no hay una relación directa entre victorias y nacimientos en el mes 9 a excepción de la Champions del 2006. Este resultado me ha llamado la atención porque subjetivamente estaba esperando un incremento considerable en la primera Champions del año 1992 (primera ganada por este equipo en toda su historia).
 
 <a name="Madrid" id="a"></a>
 <h2>BABY BOOM REAL MADRID</h2>
