--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ https://es.wikipedia.org/wiki/Selecci%C3%B3n_de_f%C3%BAtbol_de_Espa%C3%B1a
 https://es.wikipedia.org/wiki/Liga_de_Campeones_de_la_UEFA
 https://es.wikipedia.org/wiki/Real_Zaragoza<br><br>
 
-Adicionalmente a estas fuentes, para calcular el mes 9 donde habría un hipotético reapunte de nacimientos, se han sumado 40 semanas naturales a la fecha exacta del evento. Estas fechas se han obtenido de diferentes páginas de diarios deportivos y locales (Marca, As, Sport, Heraldo y Periódico de Aragón).
+Adicionalmente a estas fuentes se han utilizado también diferentes páginas de diarios deportivos y locales (Marca, As, Sport, Heraldo y Periódico de Aragón).
+En estas webs se ha obtenido la fecha exacta donde se ganó cada campeonato, y posteriormente se han sumado 40 semanas para saber el mes en el que hipotéticamente podría haber un reapunte de la natalidad. 
 
 <a href="#Indice">Indice</a><br>
 
