--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@ https://es.wikipedia.org/wiki/Liga_de_Campeones_de_la_UEFA
 https://es.wikipedia.org/wiki/Real_Zaragoza<br><br>
 
 Adicionalmente a estas fuentes se han utilizado también diferentes páginas de diarios deportivos y locales (Marca, As, Sport, Heraldo y Periódico de Aragón).
-En estas webs se ha obtenido la fecha exacta donde se ganó cada campeonato, y posteriormente se han sumado 40 semanas para saber el mes en el que hipotéticamente podría haber un reapunte de la natalidad. 
-
+En estas webs se ha obtenido la fecha exacta donde se ganó cada campeonato, y posteriormente se han sumado 40 semanas para saber el mes en el que hipotéticamente podría haber un reapunte de la natalidad. <br>
 <a href="#Indice">Indice</a><br>
 
 <br>
