--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ https://es.wikipedia.org/wiki/Liga_de_Campeones_de_la_UEFA
 https://es.wikipedia.org/wiki/Real_Zaragoza<br><br>
 
 Adicionalmente a estas fuentes se han utilizado también diferentes páginas de diarios deportivos y locales (Marca, As, Sport, Heraldo y Periódico de Aragón).
-En estas webs se ha obtenido la fecha exacta donde se ganó cada campeonato, y posteriormente se han sumado 40 semanas para saber el mes en el que hipotéticamente podría haber un reapunte de la natalidad. <br>
+En estas webs se ha obtenido la fecha exacta donde se ganó cada campeonato, y posteriormente se han sumado 40 semanas para saber el mes en el que hipotéticamente podría haber un reapunte de la natalidad. De esta manera se han podido correlar las fechas de los eventos de fútbol con los datos estadísticos del INE. <br>
 <a href="#Indice">Indice</a><br>
 
 <br>
@@ -73,7 +73,8 @@ Si normalizamos estas subidas de nacimientos y las dividimos respecto a la media
 <h2>BABY BOOM BARCELONA</h2>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe><br>
 
-En el caso de victorias del F.C. Barcelona se puede observar que no hay una relación directa entre victorias y nacimientos en el mes 9 a excepción de la Champions del 2006. Este resultado me ha llamado la atención porque subjetivamente estaba esperando un incremento considerable en la primera Champions del año 1992 (primera ganada por este equipo en toda su historia).
+En el caso de victorias del F.C. Barcelona se puede observar que no hay una relación directa entre victorias y nacimientos en el mes 9 a excepción de la Champions del 2006. Este resultado me ha llamado la atención porque subjetivamente estaba esperando un incremento considerable en la primera Champions del año 1992 (primera ganada por este equipo en toda su historia).<br>
+Es también destacable que hay a nivel general una significante bajada de nacimientos en el mes 
 <a href="#Indice">Indice</a><br>
 
 <a name="Madrid" id="a"></a>
