--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@ Es también destacable que hay a nivel general una significante bajada de nacimi
 <h2>BABY BOOM REAL ZARAGOZA</h2>
 <iframe width="793" height="490" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=505537842&amp;format=interactive"></iframe><br>
 
+En las gráficas de victorias del Zaragoza observo que solamente hay un repunte positivo en el mes 9 en la Recopa del 95 (único título europeo de este equipo en toda su historia). En el resto de meses 9 no hay crecimiento. Sin embargo sí se ve en en el resto de casos un crecimiento en el mes 10, que tal vez pudiera tener relación con las victorias según los días en los que se hubieran producido.<br><br>
+
+También 
+
 <a href="#Indice">Indice</a><br>
 
 <a name="Analisis" id="a"></a>
