--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Es también destacable que hay a nivel general una significante bajada de nacimi
 
 En las gráficas de victorias del Zaragoza observo que solamente hay un repunte positivo en el mes 9 en la Recopa del 95 (único título europeo de este equipo en toda su historia). En el resto de meses 9 no hay crecimiento. Sin embargo sí se ve en en el resto de casos un crecimiento en el mes 10, que tal vez pudiera tener relación con las victorias según los días en los que se hubieran producido.<br><br>
 
-También 
+También me ha llamado la atención que el volumen de nacimientos es mayor en los años 2000 que en los 90. Según lo que he podido ver en fuentes especialidadas, esta diferencia se debe principalmente al aumento exponencial de la población, y a la bonanza económica que tuvo esta región en la primera década de los años 2000. <br><br>
 
 <a href="#Indice">Indice</a><br>
 
