--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@ Si normalizamos estas subidas de nacimientos y las dividimos respecto a la media
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe><br>
 
 En el caso de victorias del F.C. Barcelona se puede observar que no hay una relación directa entre victorias y nacimientos en el mes 9 a excepción de la Champions del 2006. Este resultado me ha llamado la atención porque subjetivamente estaba esperando un incremento considerable en la primera Champions del año 1992 (primera ganada por este equipo en toda su historia).<br>
-Es también destacable que hay a nivel general una significante bajada de nacimientos en el mes 
-<a href="#Indice">Indice</a><br>
+Es también destacable que hay a nivel general una significante bajada de nacimientos en el mes <br><br>
+<a href="#Indice">Indice</a>
 
 <a name="Madrid" id="a"></a>
 <h2>BABY BOOM REAL MADRID</h2>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=1854649824&amp;format=interactive"></iframe><br>
 En el caso del Real Madrid, solamente se ve un incremento significativo en las Champions del año 2000 y 2002. Curiosamente, en la Champions no se ve un aumento a pesar de que este título se ganó casi 30 años después del anterior. 
-Como ha pasado en otros equipos, se ve una caída abrupta en el mes 10 a excepción de la Champions del año 2016, cuyos nacimientos también podrían estar asociados a esta victoria dependiendo de las fechas exactas de nacimientos. <b>
+Como ha pasado en otros equipos, se ve una caída abrupta en el mes 10 a excepción de la Champions del año 2016, cuyos nacimientos también podrían estar asociados a esta victoria dependiendo de las fechas exactas de nacimientos. <b><br>
 <a href="#Indice">Indice</a><br>
 
 <a name="Zaragoza" id="a"></a>
