--- a/index.html
+++ b/index.html
@@ -98,4 +98,6 @@ También me ha llamado la atención que el volumen de nacimientos es mayor en lo
 <a name="Analisis" id="a"></a>
 <h2>ANALISIS EVENTOS CON MAYOR IMPACTO</h2>
 
+Con la siguiente gráfica he intentado ponderar qué título tuvo más impacto en los nacimientos posteriores acaecidos entre los meses 8 y 9. Para ello, he calculado por equipo o campeonato el delta o diferencia entre estos meses, y para poder normalizarlo y hacer una comparativa válida, he divido esa cantidad por la media anual de nacimientos. <br><br>
+
 <iframe width="728.5" height="450.4558333333333" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=310149931&amp;format=interactive"></iframe>
