--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Es también destacable que hay a nivel general una significante bajada de nacimi
 <h2>BABY BOOM REAL MADRID</h2>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=1854649824&amp;format=interactive"></iframe><br>
 En el caso del Real Madrid, solamente se ve un incremento significativo en las Champions del año 2000 y 2002. Curiosamente, en la Champions no se ve un aumento a pesar de que este título se ganó casi 30 años después del anterior. 
-Como ha pasado en otros equipos, se ve una caída abrupta en el mes 10 a excepción de la Champions del año 2016, cuyos nacimientos también podrían estar asociados a esta victoria dependiendo de las fechas exactas de nacimientos. <b><br>
+Como ha pasado en otros equipos, se ve una caída abrupta en el mes 10 a excepción de la Champions del año 2016, cuyos nacimientos también podrían estar asociados a esta victoria dependiendo de las fechas exactas de nacimientos. <br><br>
 <a href="#Indice">Indice</a><br>
 
 <a name="Zaragoza" id="a"></a>
@@ -92,7 +92,6 @@ Como ha pasado en otros equipos, se ve una caída abrupta en el mes 10 a excepci
 En las gráficas de victorias del Zaragoza observo que solamente hay un repunte positivo en el mes 9 en la Recopa del 95 (único título europeo de este equipo en toda su historia). En el resto de meses 9 no hay crecimiento. Sin embargo sí se ve en en el resto de casos un crecimiento en el mes 10, que tal vez pudiera tener relación con las victorias según los días en los que se hubieran producido.<br><br>
 
 También me ha llamado la atención que el volumen de nacimientos es mayor en los años 2000 que en los 90. Según lo que he podido ver en fuentes especialidadas, esta diferencia se debe principalmente al aumento exponencial de la población, y a la bonanza económica que tuvo esta región en la primera década de los años 2000. <br><br>
-
 <a href="#Indice">Indice</a><br>
 
 <a name="Analisis" id="a"></a>
