--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body background="https://img.freepik.com/free-photo/shooting-shot-football-goal-net-with-green-grass-field-background_1150-6178.jpg?size=626&ext=jpg">
-
+<font face="Comic Sans MS,arial,verdana">
 <h1>Portfolio - Rubén Fondón </h1>
 Nombre: Rubén Fondón<br>
 URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
@@ -97,3 +97,4 @@ Como se puede observar, el impacto que más peso tuvo fue la Copa del Mundo. Es 
 <iframe width="728.5" height="450.4558333333333" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=310149931&amp;format=interactive"></iframe><br><br>
 
 <a href="#Indice">Indice</a><br>
+</font>
