--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<body background="https://img.freepik.com/free-photo/shooting-shot-football-goal-net-with-green-grass-field-background_1150-6178.jpg?size=626&ext=jpg">
+<body background="https://image.freepik.com/vector-gratis/balon-de-futbol-o-futbol-vector-aislado-sobre-fondo-blanco_33987-48.jpg">
 <font face="Comic Sans MS,arial,verdana">
-<h1>Portfolio - Rubén Fondón </h1>
+<font color = "blue"><h1>Portfolio - Rubén Fondón </h1>
 Nombre: Rubén Fondón<br>
 URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
-<a name="Indice" id="a"></a>
-<h2>INDICE</h2>
+<a name="Indice" id="a"></a></font>
+<font color = "blue"><h2>INDICE</h2></font>
 <a href="#Introduccion">INTRODUCCION</a><br>
 <a href="#Fuentes">FUENTES DE INFORMACION</a><br>
 <a href="#Selección">BABY BOOM SELECCION ESPAÑOLA</a><br>
@@ -15,7 +15,7 @@ URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 <a href="#Analisis">ANALISIS EVENTOS CON MAYOR IMPACTO</a><br>
 
 <a name="Introduccion" id="a"></a>
-<h2>INTRODUCCION</h2>
+<font color = "blue"><h2>INTRODUCCION</h2></font>
 
 ¿Sube la natalidad cuando se gana una campeonato de fútbol?
 
@@ -40,7 +40,7 @@ A modo introductorio y humorístico comparto para el lector este video tan diver
 <a href="#Indice">Indice</a><br>
 
 <a name="Fuentes" id="a"></a>
-<h2>FUENTES DE INFORMACION </h2>
+<font color = "blue"><h2>FUENTES DE INFORMACION </h2></font>
 - Instituto Nacional de Estadística<br>
 http://www.ine.es/dynt3/inebase/es/index.htm?padre=1123&capsel=1125<br>
 - Wikipedia<br>
@@ -54,7 +54,7 @@ En estas webs se ha obtenido la fecha exacta donde se ganó cada campeonato, y p
 
 <br>
 <a name="Selección" id="a"></a>
-<h2>BABY BOOM SELECCION ESPAÑOLA</h2>
+<font color = "blue"><h2>BABY BOOM SELECCION ESPAÑOLA</h2></font>
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=711909960&amp;format=interactive"></iframe><br>
 En esta primera gráfica se observa que hay un pico de nacimientos en el mes 9 cuando España ganó (en orden cronológico) la Copa del Mundo de 2010 y la Eurocopa de 2012. En la primera Eurocopa del 2008 se ve también un gran crecimiento en el mes 10 posterior. Por lo tanto en los dos eventos sí que vemos una relación positiva de nacimientos.
 Hay que tener en cuenta que los datos obtenidos del INE no muestran un nivel de granuralidad de nacimiento diarios (solamente acumulado mensual)por lo que parte de los nacimientos del Mes 10 de la primera Eurocopa podrían también estar asociados a ese evento si nacieron a principio de mes.
@@ -65,7 +65,7 @@ Si normalizamos estas subidas de nacimientos y las dividimos respecto a la media
 <a href="#Indice">Indice</a><br>
 
 <a name="Barcelona" id="a"></a>
-<h2>BABY BOOM BARCELONA</h2>
+<font color = "blue"><h2>BABY BOOM BARCELONA</h2></font>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=902680209&amp;format=interactive"></iframe><br>
 
 En el caso de victorias del F.C. Barcelona se puede observar que no hay una relación directa entre victorias y nacimientos en el mes 9 a excepción de la Champions del 2006. Este resultado me ha llamado la atención porque subjetivamente estaba esperando un incremento considerable en la primera Champions del año 1992 (primera ganada por este equipo en toda su historia).<br>
@@ -73,14 +73,14 @@ Es también destacable que hay a nivel general una significante bajada de nacimi
 <a href="#Indice">Indice</a>
 
 <a name="Madrid" id="a"></a>
-<h2>BABY BOOM REAL MADRID</h2>
+<font color = "blue"><h2>BABY BOOM REAL MADRID</h2></font>
 <iframe width="782" height="483" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=1854649824&amp;format=interactive"></iframe><br>
 En el caso del Real Madrid, solamente se ve un incremento significativo en las Champions del año 2000 y 2002. Curiosamente, en la Champions no se ve un aumento a pesar de que este título se ganó casi 30 años después del anterior. 
 Como ha pasado en otros equipos, se ve una caída abrupta en el mes 10 a excepción de la Champions del año 2016, cuyos nacimientos también podrían estar asociados a esta victoria dependiendo de las fechas exactas de nacimientos. <br><br>
 <a href="#Indice">Indice</a><br>
 
 <a name="Zaragoza" id="a"></a>
-<h2>BABY BOOM REAL ZARAGOZA</h2>
+<font color = "blue"><h2>BABY BOOM REAL ZARAGOZA</h2></font>
 <iframe width="793" height="490" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=505537842&amp;format=interactive"></iframe><br>
 
 En las gráficas de victorias del Zaragoza observo que solamente hay un repunte positivo en el mes 9 en la Recopa del 95 (único título europeo de este equipo en toda su historia). En el resto de meses 9 no hay crecimiento. Sin embargo sí se ve en en el resto de casos un crecimiento en el mes 10, que tal vez pudiera tener relación con las victorias según los días en los que se hubieran producido.<br><br>
@@ -89,7 +89,7 @@ También me ha llamado la atención que el volumen de nacimientos es mayor en lo
 <a href="#Indice">Indice</a><br>
 
 <a name="Analisis" id="a"></a>
-<h2>ANALISIS EVENTOS CON MAYOR IMPACTO</h2>
+<font color = "blue"><h2>ANALISIS EVENTOS CON MAYOR IMPACTO</h2></font>
 
 Con la siguiente gráfica he intentado ponderar qué título tuvo más impacto en los nacimientos posteriores acaecidos entre los meses 8 y 9. Para ello, he calculado por equipo o campeonato el delta o diferencia entre estos meses, y para poder normalizarlo y hacer una comparativa válida he divido esa cantidad por la media anual de nacimientos. Para la generación de este gráfico solamente he seleccionado aquellos casos de nacimientos por encima de la media anual. <br><br> 
 Como se puede observar, el impacto que más peso tuvo fue la Copa del Mundo. Es lógico porque fue el primer campeonato de este tipo que ganó la Selección Española en toda su historia y trajo gran alegría a un país en crisis. También destacaría la Eurocopa del 2010 por la misma razón, y sobre todo la Recopa del Real Zaragoza en el año 1995, ya que fue y ha sido el único título europeo ganado por este equipo. Por último, respecto a las Champions, hay también un par de casos con gran impacto pero que curiosamente no son ni la Champions del año 1992 del Barcelona (primera ganada), ni la de 19997 del Real Madrid (la primera ganada después de muchos años). Creo que habría que tener en cuenta variables adicionales para obtener unas conclusiones estadísticas más afinadas en el estudio de nacimientos después de ganar Champions. <br><br>
