--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body background="https://image.freepik.com/vector-gratis/balon-de-futbol-o-futbol-vector-aislado-sobre-fondo-blanco_33987-48.jpg">
 <font face="Comic Sans MS,arial,verdana">
-<font color = "blue"><h1>Portfolio - Rubén Fondón </h1>
+<font color = "blue"><h1>Portfolio - Rubén Fondón </h1></font>
 Nombre: Rubén Fondón<br>
 URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
