--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@ A modo introductorio y humorístico comparto para el lector este video tan diver
 <a name="Fuentes" id="a"></a>
 <font color = "blue"><h2>FUENTES DE INFORMACION </h2></font>
 - Instituto Nacional de Estadística<br>
-http://www.ine.es/dynt3/inebase/es/index.htm?padre=1123&capsel=1125<br>
+http://www.ine.es/dynt3/inebase/es/index.htm?padre=1123&capsel=1125<br><br>
 - Wikipedia<br>
-https://es.wikipedia.org/wiki/Selecci%C3%B3n_de_f%C3%BAtbol_de_Espa%C3%B1a
-https://es.wikipedia.org/wiki/Liga_de_Campeones_de_la_UEFA
+https://es.wikipedia.org/wiki/Selecci%C3%B3n_de_f%C3%BAtbol_de_Espa%C3%B1a<br>
+https://es.wikipedia.org/wiki/Liga_de_Campeones_de_la_UEFA<br>
 https://es.wikipedia.org/wiki/Real_Zaragoza<br><br>
 
 Adicionalmente a estas fuentes se han utilizado también diferentes páginas de diarios deportivos y locales (Marca, As, Sport, Heraldo y Periódico de Aragón).
-En estas webs se ha obtenido la fecha exacta donde se ganó cada campeonato, y posteriormente se han sumado 40 semanas para saber el mes en el que hipotéticamente podría haber un reapunte de la natalidad. De esta manera se han podido correlar las fechas de los eventos de fútbol con los datos estadísticos del INE. <br>
+En estas webs se ha obtenido la fecha exacta donde se ganó cada campeonato, y posteriormente se han sumado 40 semanas para saber el mes en el que hipotéticamente podría haber un reapunte de la natalidad. De esta manera se han podido correlar las fechas de los eventos de fútbol con los datos estadísticos del INE. <br><br>
 <a href="#Indice">Indice</a><br>
 
 <br>
